hphp/test/zend/good/tests/classes/interface_constant_inheritance_003.php.expectf

Fatal error: C cannot inherit the constant FOO from I2, because it was previously inherited from I1 in %s/interface_constant_inheritance_003.php on line 10
